<resources>
    <string name="app_name">GraphCD</string>

    <string name="graph_reinitialize">Réinitialiser le graph</string>
    <string name="edge_modification_mode">Modifier arc</string>
    <string name="edge_edit_message">Mode modification d\'arc activé</string>
    <string name="node_modification_mode">Modifier un noeud</string>
    <string name="node_edit_message">Mode modification de noeud activé</string>
    <string name="new_node_mode">Ajouter un noeud</string>
    <string name="new_edge_mode">Ajouter un arc</string>
    <string name="move_mode">Déplacer un noeud/arc</string>
    <string name="move_mode_message">Mode déplacement de noeud ou d\'arc activé</string>
    <string name="new_node_title">Nouveau noeud</string>
    <string name="save_graph">Sauvegarder le graph</string>
    <string name="open_existing_graph">Ouvrir graph</string>
    <string name="share_graph">Envoyer par email</string>
    <string name="delete_node">Supprimer</string>
    <string name="edit_thumbnail">Modifier l\'étiquette</string>
    <string name="edit_size_node">Modifier la taille</string>
    <string name="edit_color_node">Modifier la couleur</string>
    <string name="title_node_menu">Modifier un noeud</string>
    <string name="title_edge_menu">Modifier une arc</string>
    <string name="new_node_thumbnail">Entrer le nom du nouveau noeud</string>
    <string name="edit_thumbnail_hint">Nom de l\'étiquette</string>
    <string name="edit_thumbnail_message">Entrer le nom de l\'étiquette</string>
    <string name="color">Couleur</string>
    <string name="edit_color">Modifier la couleur</string>
    <string name="edit_size_message">Choisir une taille</string>
    <string name="edit_thickness_edge">Modifier l\'épaisseur</string>
    <string name="accept">OK</string>
    <string name="cancel">Annuler</string>
    <string name="confirm">Êtes-vous sûr ?</string>
    <string name="reinitialize_title">Réinitialiser le graph</string>
    <string name="title_file">Choisir le fichier</string>
    <string name="content_description">Description</string>
    <string name="save_graph_message">Votre graph a bien été enregistré</string>
    <string name="zoom_mode">Mode zoom</string>
    <string name="zoom_mode_message">Mode zoom, revenez en arrière pour revenir au mode normal</string>
</resources>
