<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/graph_reinitialize"
        android:title="@string/graph_reinitialize" />

    <group
        android:id="@+id/groupModification"
        android:checkableBehavior="single">

        <item android:id="@+id/newNodeMode"
            android:title="@string/new_node_mode" />

        <item android:id="@+id/newEdgeMode"
            android:title="@string/new_edge_mode" />

        <item android:id="@+id/nodeModificationMode"
            android:title="@string/node_modification_mode" />

        <item android:id="@+id/edgeModificationMode"
            android:title="@string/edge_modification_mode" />

        <item android:id="@+id/moveMode"
            android:title="@string/move_mode" />
    </group>

</menu>